--- a/redux-starter/package.json
+++ b/redux-starter/package.json
@@ -13,5 +13,8 @@
     "webpack": "4.41.6",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
